feat: add metrics endpoint
